<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp">

<!--    <com.google.android.material.navigation.NavigationView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@color/white"/>-->

    <TextView
        android:id="@+id/allorder"
        style="@style/Tv.EqualSpace.Personal"
        android:text="@string/text_order_all"
        android:visibility="gone"
        app:drawableTopCompat="@mipmap/ic_order_all" />

    <TextView
        android:id="@+id/waitforpayorder"
        style="@style/Tv.EqualSpace.Personal"
        android:text="@string/text_order_pay"
        app:drawableTopCompat="@mipmap/ic_order_pay" />

    <TextView
        style="@style/Tv.EqualSpace.Personal"
        android:text="待成团"
        android:id="@+id/waitforgroup"
        app:drawableTopCompat="@mipmap/waitforgroup"/>

    <TextView
        android:id="@+id/waitfordeliverorder"
        style="@style/Tv.EqualSpace.Personal"
        android:text="@string/text_order_delivery"
        app:drawableTopCompat="@mipmap/ic_order_delivery" />

    <TextView
        android:id="@+id/waitgetorder"
        style="@style/Tv.EqualSpace.Personal"
        android:text="@string/text_order_receive"
        app:drawableTopCompat="@mipmap/ic_order_receive" />

    <TextView
        android:id="@+id/alreadydoneorder"
        style="@style/Tv.EqualSpace.Personal"
        android:text="@string/text_order_finish"
        android:visibility="gone"
        app:drawableTopCompat="@mipmap/ic_order_evaluation" />

</LinearLayout>
