<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_title">

        <ImageView
            style="@style/Iv.Return"
            android:layout_marginStart="@dimen/margin_horizontal_icon_system"
            android:onClick="toReturn"/>

        <ImageView
            android:id="@+id/ivClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/margin_horizontal_icon_system"
            android:src="@mipmap/ic_close"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            style="@style/Tv.Black"
            android:layout_marginTop="@dimen/margin_top_title"
            android:text="@string/title_enter_message"
            android:textSize="@dimen/size_text_title"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/ivHead"
            android:src="@mipmap/iv_head_boy"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:layout_marginTop="35.5dp"
            android:scaleType="centerCrop"
            android:background="@drawable/iv_bg_login_head"/>

        <TextView
            style="@style/Tv.Blue"
            android:layout_marginTop="10dp"
            android:text="@string/text_enter_message_head"
            android:textSize="15dp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">

            <TextView
                style="@style/Tv.Black"
                android:layout_centerVertical="true"
                android:text="@string/text_enter_message_name"
                android:textSize="15dp"/>

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="50dp"
                android:layout_alignParentEnd="true"
                android:paddingHorizontal="17dp"
                android:hint="@string/hint_enter_message_name"
                android:autofillHints=""
                android:textSize="15dp"
                android:inputType="none"
                android:maxLength="@integer/et_name_length_max"
                android:background="@drawable/et_login_bg"/>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:gravity="center_vertical">

            <TextView
                style="@style/Tv.Black"
                android:text="@string/text_enter_message_sex"
                android:textSize="15dp"/>

            <RadioGroup
                android:id="@+id/btnGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/btnGenderMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:paddingHorizontal="9.5dp"
                    android:text="@string/rb_sex_male"
                    android:button="@drawable/btn_login_sure"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/btnGenderFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:paddingHorizontal="9.5dp"
                    android:text="@string/rb_sex_female"
                    android:button="@drawable/btn_login_sure"/>


            </RadioGroup>
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp">

            <TextView
                style="@style/Tv.Black"
                android:layout_centerVertical="true"
                android:text="@string/text_enter_message_birthday"
                android:textSize="15dp"/>

            <TextView
                android:id="@+id/tvBirthday"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="50dp"
                android:paddingHorizontal="17dp"
                android:layout_alignParentEnd="true"
                android:gravity="center_vertical"
                android:hint="@string/hint_enter_message_birthday"
                android:autofillHints="@string/hint_enter_message_birthday"
                android:textSize="15dp"
                android:background="@drawable/et_login_bg" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="11dp"
                android:layout_centerVertical="true"
                android:src="@mipmap/btn_enter_message_calendar"
                android:background="@color/white" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:background="@drawable/text_underline_login_loose">

            <TextView
                android:id="@+id/tv4"
                style="@style/Tv.Black"
                android:text="@string/text_enter_message_hobby"
                android:textSize="15dp" />

            <TextView
                style="@style/Tv.Grey"
                android:layout_toEndOf="@id/tv4"
                android:layout_marginStart="20dp"
                android:text="@string/hint_enter_message_maybe"
                android:textSize="15dp" />

            <TextView
                style="@style/Tv.Grey"
                android:layout_alignParentEnd="true"
                android:baselineAligned="false"
                android:text="@string/hint_enter_message_most_choices"
                android:textSize="15dp"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>


        <!--<com.donkingliang.labels.LabelsView
            android:id="@+id/lvHobbiesAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:paddingVertical="5dp"
            app:selectType="MULTI"
            app:labelTextColor="@color/selector_enter_message_hobbies_tag"
            app:labelBackground="@drawable/lv_login_hobby"
            app:lineMargin="10dp"
            app:wordMargin="10dp"
            app:maxSelect="3"/>-->


        <Button
            android:id="@+id/btnFinish"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="26dp"
            android:text="@string/btn_finish"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:background="@drawable/btn_login_bg_rectangle_blue"/>

    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>