<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/flLogin"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.qunshang.wenpaitong.equnshang.activity.RegisterActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ly1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="61dp"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@mipmap/logo" />

            <TextView
                style="@style/Tv.Black"
                android:layout_marginTop="22dp"
                android:text="@string/text_login_say_hello"
                android:textColor="@color/black"
                android:textSize="21dp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/etEnterPhone"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="35.5dp"
                android:autofillHints="@string/text_login_enter_phone"
                android:background="@null"
                android:hint="@string/text_login_enter_phone"
                android:inputType="phone"
                android:paddingStart="1dp"
                android:paddingEnd="1dp"
                android:textColor="@color/text_grey"
                android:textSize="15dp"
                android:maxLength="11"/>

            <View
                android:layout_width="280dp"
                android:layout_height="0.5dp"
                android:layout_marginTop="6dp"
                android:background="#ff999999"/>

            <RelativeLayout
                android:id="@+id/ry1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35.5dp"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/etEnterVCode"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/text_login_enter_code"
                    android:background="@null"
                    android:hint="@string/text_login_enter_code"
                    android:inputType="number"
                    android:paddingStart="1dp"
                    android:paddingEnd="1dp"
                    android:textColor="@color/text_grey"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/tvGetVCode"
                    style="@style/Tv.Blue"
                    android:layout_alignEnd="@id/etEnterVCode"
                    android:layout_alignBottom="@id/etEnterVCode"
                    android:text="@string/text_login_get_code"
                    android:textSize="15dp" />
            </RelativeLayout>

            <View
                android:layout_width="280dp"
                android:layout_height="0.5dp"
                android:layout_marginTop="6dp"
                android:background="#ff999999"/>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="280dp"
                android:layout_height="42dp"
                android:layout_marginTop="47.5dp"
                android:background="@drawable/btn_login_bg_rectangle_blue"
                android:text="下一步"
                android:textColor="@color/white"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btnAgree"
                android:layout_width="22dp"
                android:layout_height="32dp"
                android:paddingBottom="10dp"
                android:paddingRight="10dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/btn_login_select_false"/>

            <TextView
                android:id="@+id/tvProtocol"
                style="@style/Tv.Black"
                android:layout_marginTop="1dp"
                android:includeFontPadding="false"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:text="@string/text_login_protocol"
                android:textColorHighlight="@color/blue_light"
                android:textSize="10dp" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>