<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="17dp"
    android:background="@color/white">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_item_comment_head"
        android:layout_width="37dp"
        android:layout_height="37dp"
        app:srcCompat="@mipmap/iv_head_boy"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_item_comment_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/text_nonsense_name"
            android:textSize="14dp"
            android:textStyle="bold"
            android:textColor="#ff666666"/>

        <TextView
            android:id="@+id/tv_item_comment_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/text_nonsense_comment"
            android:textColor="@color/black"
            android:textSize="16dp"/>

        <TextView
            android:id="@+id/tv_item_comment_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:text="@string/text_nonsense_time"
            android:textColor="#ff999999"
            android:textSize="14dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="24dp"
        android:gravity="center_horizontal">

        <ImageView
            android:src="@mipmap/btn_comment_like_false"
            android:id="@+id/btn_item_comment_like"
            android:layout_width="21dp"
            android:layout_height="21dp"
            android:layout_marginTop="10dp"
            android:button="@drawable/btn_comment_like"/>

        <TextView
            android:id="@+id/tv_item_comment_likecount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_grey"
            android:textSize="15dp"/>
    </LinearLayout>
</LinearLayout>
</RelativeLayout>


