<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/flLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.qunshang.wenpaitong.equnshang.fragment.LoginFragment">

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/ly1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="47dp"
            android:src="@mipmap/logo" />

        <TextView
            android:layout_marginLeft="48dp"
            style="@style/Tv.Black"
            android:layout_marginTop="22dp"
            android:text="@string/text_login_say_hello"
            android:textSize="21dp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/etEnterPhone"
            android:layout_width="match_parent"
            android:layout_height="21dp"
            android:layout_marginTop="35.5dp"
            android:hint="@string/text_login_enter_phone"
            android:inputType="phone"
            android:background="@null"
            android:digits="0123456789"
            android:gravity="center_vertical"
            android:includeFontPadding="false"
            android:maxLength="11"
            android:layout_marginHorizontal="47dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColor="@color/text_grey"
            android:textSize="15dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="6dp"
            android:layout_marginHorizontal="47dp"
            android:background="#ff999999"/>

        <TextView
            android:layout_width="wrap_content"
            android:includeFontPadding="false"
            android:layout_height="wrap_content"
            android:text="未注册的手机号通过验证码将自动注册"
            android:textColor="#ff333333"
            android:layout_marginTop="3dp"
            android:textSize="11dp"
            android:layout_marginLeft="47dp"
            />


        <RelativeLayout
            android:id="@+id/ry1"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="47dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35.5dp"
            android:orientation="vertical">


            <EditText
                android:id="@+id/etEnterVCode"
                android:layout_width="match_parent"
                android:layout_height="21dp"
                android:background="@null"
                android:digits="0123456789"
                android:hint="@string/text_login_enter_code"
                android:includeFontPadding="false"
                android:inputType="number|numberDecimal"
                android:maxLength="6"
                android:numeric="integer"
                android:textColor="@color/text_grey"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/tvGetVCode"
                style="@style/Tv.Blue"
                android:layout_alignEnd="@id/etEnterVCode"
                android:layout_alignBottom="@id/etEnterVCode"
                android:text="@string/text_login_get_code"
                android:textSize="15dp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_marginHorizontal="47dp"
            android:layout_height="0.5dp"
            android:layout_marginTop="6dp"
            android:background="#ff999999"/>

        <LinearLayout
            app:layout_constraintLeft_toLeftOf="@id/ly1"
            app:layout_constraintRight_toRightOf="@id/ly1"
            app:layout_constraintTop_toBottomOf="@id/ly1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:layout_marginRight="47dp"
            android:layout_marginLeft="42dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btnAgree"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:paddingVertical="11dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:adjustViewBounds="true"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/btn_login_select_false"/>

            <TextView
                android:id="@+id/tvProtocol"
                style="@style/Tv.Black"
                android:gravity="left"
                android:textStyle="bold"
                android:text="@string/text_login_protocol"
                android:textColorHighlight="@color/blue_light"
                android:textSize="11dp" />

        </LinearLayout>


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="47dp"
            android:layout_height="42dp"
            android:layout_marginTop="20dp"
            android:clickable="false"
            android:background="@drawable/btn_login_bg_rectangle_greyblue"
            android:text="@string/btn_login_login"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <Button
            android:visibility="gone"
            android:id="@+id/btnRegister"
            android:layout_width="280dp"
            android:layout_height="42dp"
            android:clickable="false"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_login_bg_rectangle_white"
            android:text="@string/btn_login_register"
            android:textColor="@color/blue"
            android:textSize="20dp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="54dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="密码登录"
            android:includeFontPadding="false"
            android:textColor="#ff333333"
            android:textSize="14dp"
            android:id="@+id/label_mima_denglu"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <ImageView
            android:layout_width="35dp"
            android:id="@+id/image_mima_denglu"
            android:layout_height="35dp"
            app:layout_constraintBottom_toTopOf="@id/label_mima_denglu"
            app:layout_constraintLeft_toLeftOf="@id/label_mima_denglu"
            app:layout_constraintRight_toRightOf="@id/label_mima_denglu"
            android:src="@mipmap/image_new_mimaguanli"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="其他登录方式"
            android:textColor="#ff999999"
            android:layout_marginBottom="23dp"
            android:textSize="11dp"
            android:includeFontPadding="false"
            android:id="@+id/label_qitadenglu"
            app:layout_constraintLeft_toLeftOf="@id/image_mima_denglu"
            app:layout_constraintRight_toRightOf="@id/image_mima_denglu"
            app:layout_constraintBottom_toTopOf="@id/image_mima_denglu"
            />

        <View
            android:layout_width="60dp"
            android:layout_marginRight="18dp"
            android:layout_height="0.5dp"
            app:layout_constraintRight_toLeftOf="@id/label_qitadenglu"
            app:layout_constraintTop_toTopOf="@id/label_qitadenglu"
            app:layout_constraintBottom_toBottomOf="@id/label_qitadenglu"
            android:background="#ff999999"/>

        <View
            android:layout_width="60dp"
            android:layout_marginLeft="18dp"
            android:layout_height="0.5dp"
            app:layout_constraintLeft_toRightOf="@id/label_qitadenglu"
            app:layout_constraintTop_toTopOf="@id/label_qitadenglu"
            app:layout_constraintBottom_toBottomOf="@id/label_qitadenglu"
            android:background="#ff999999"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>